--- a/2.8 trabajo colaborativo en Git/main.css
+++ b/2.8 trabajo colaborativo en Git/main.css
@@ -1,7 +1,12 @@
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .head {
   background: blue;
   height: 100px;
-  position: relative;
   width: 100px;
 }
 .face {
